thecodeboss/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: thecodeboss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: plugins
        persistentVolumeClaim:
          claimName: plugins
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads
      containers:
      - name: app
        image: alkrauss48/thecodeboss.dev:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: plugins
          mountPath: "/var/www/html/wp-content/plugins"
        - name: uploads
          mountPath: "/var/www/html/wp-content/uploads"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: thecodeboss
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 80
