thecodeboss/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: thecodeboss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database
      containers:
      - name: db
        image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: database
          mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: thecodeboss
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 3306
