thecodeboss/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: thecodeboss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
      - name: plugins
        persistentVolumeClaim:
          claimName: plugins
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads
      containers:
      - name: wordpress
        image: alkrauss48/thecodeboss.dev:latest
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: plugins
          mountPath: "/var/www/html/wp-content/plugins"
        - name: uploads
          mountPath: "/var/www/html/wp-content/uploads"
        livenessProbe:
          httpGet:
            path: /
            port: 9000
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: thecodeboss
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - port: 9000
