thecodeboss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: thecodeboss
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - thecodeboss.dev
      secretName: ingress-tls
  rules:
    - host: thecodeboss.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: thecodeboss
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: https://resume.thecodeboss.dev/aaron-krauss
spec:
  tls:
    - hosts:
      - thecodeboss.dev
      secretName: ingress-tls
  rules:
    - host: thecodeboss.dev
      http:
        paths:
        - path: /resume
          pathType: Exact
          backend:
            service:
              name: app
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soc-ingress
  namespace: thecodeboss
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://thecodeboss.dev$request_uri
spec:
  tls:
    - hosts:
      - thesocietea.org
      secretName: soc-ingress-tls
  rules:
    - host: thesocietea.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
